manifests/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: ingress-workload-identity
      nodeSelector:
        agentpool: workloads
      topologySpreadConstraints:
      - maxSkew: 2
        topologyKey: "kubernetes.io/hostname" # spread evenly across nodes
        whenUnsatisfiable: DoNotSchedule # or ScheduleAnyway
        labelSelector:
          matchLabels:
            app: hello-world
      containers:
      - name: hello-world
        image: julieio/hello:0.4.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        volumeMounts:
        - name: ingress-tls-${AKS_ENV_NAME}
          mountPath: "/mnt/ingress-tls-${AKS_ENV_NAME}"
          readOnly: true
      volumes:
      - name: ingress-tls-${AKS_ENV_NAME}
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "ingress-tls-${AKS_ENV_NAME}"
