manifests/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hello-world
  namespace: ingress
spec:
  tls:
  - hosts:
      - '${AKS_ENV_HOSTNAME}'
    secretName: ingress-tls-${AKS_ENV_NAME}
  rules:
    - host: ${AKS_ENV_HOSTNAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
